# ter-music

./: .SRCINFO  .gitattributes  .gitignore  BUILD_GUIDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile.cross-build  PKGBUILD  README.md  README_CN.md  README_zh-CN_Legacy.md  README_zh-CN_Modern.md  build-appimage.sh  build-deb.sh  build-linyaps.sh  build-portable.sh  build-rpm.sh  cross-build.sh  docker-compose.cross.yml  vcpkg-configuration.json  vcpkg.json
cmake/: toolchain-aarch64-linux-gnu.cmake
data/: help-quickstart-en.txt  help-quickstart-zh.txt
debian/: changelog  control  copyright  docs  rules
docs/: BUILD_GUIDE.md  README.md
docs/translations/: README_zh-CN_Legacy.md  README_zh-CN_Modern.md
include/: config_migration.h  config_schema.h  config_xml.h  defs.h  dyn_pipewire.h  library.h  lyrics.h  menu_views.h  pinyin_table.h  progress.h  remote.h  scrollbar.h  search.h
include/compat/: dirent.h  getopt.h
include/org.yxzl.ter-music/: types.h  windows_compat.h
include/org.yxzl.ter-music/audio/: audio.h  audio_internal.h  equalizer.h  play_queue.h  segment_buffer.h
include/org.yxzl.ter-music/audio/backend/: alsa.h  pulse.h  wasapi.h
include/org.yxzl.ter-music/audio/progress/: progress.h
include/org.yxzl.ter-music/config/: config.h  crypto.h  schema.h
include/org.yxzl.ter-music/logger/: logger.h
include/org.yxzl.ter-music/media/: session.h
include/org.yxzl.ter-music/playlist/: ape_tag.h  cue_parser.h  encoding.h  playlist.h
include/org.yxzl.ter-music/remote/: remote.h
include/org.yxzl.ter-music/search/: search.h
include/org.yxzl.ter-music/ui/: dialog.h  lyrics.h  menu_internal.h  menus.h  ui.h
include/org.yxzl.ter-music/ui/braille/: braille_art.h
packaging/aur/: .SRCINFO
packaging/debian/: control
packaging/windows/: windows.nsi
scripts/: README.md
scripts/cross-compile/: Dockerfile  Dockerfile.deb-static  Dockerfile.rpm  Dockerfile.rpm-static  Dockerfile.static  cross-build.sh  docker-compose.yml
share/applications/: ter-music.desktop
src/: ape_tag.c  audio.c  braille_art.c  config_migration.c  config_xml.c  image_loader.c  library.c  logger.c  lyrics.c  main.c  media_session.c  menu_views.c  playlist.c  progress.c  remote.c  scrollbar.c  search.c  ui.c
src/braille_art/: braille_art.c  braille_art.h  image_loader.c
src/compat/: dirent.c  execinfo.c  getopt.c
src/org.yxzl.ter-music/audio/: atempo.c  audio.c  backend_ops.c  equalizer.c  play_queue.c  playback_thread.c  segment_buffer.c
src/org.yxzl.ter-music/audio/backend/: pipewire.c  wasapi.c
src/org.yxzl.ter-music/audio/progress/: progress.c
src/org.yxzl.ter-music/config/: config.c  crypto.c  migration.c
src/org.yxzl.ter-music/logger/: logger.c
src/org.yxzl.ter-music/main/: main.c
src/org.yxzl.ter-music/media/: session.c
src/org.yxzl.ter-music/playlist/: cue_parser.c  encoding.c  playlist.c
src/org.yxzl.ter-music/remote/: remote.c
src/org.yxzl.ter-music/search/: search.c
src/org.yxzl.ter-music/ui/: controls.c  dialog.c  favorites.c  help_view.c  history.c  info_view.c  layout.c  lyrics.c  menus.c  mouse.c  playlist_render.c  playlist_view.c  progress_ui.c  scrollbar.c  settings.c  ui.c  utf8.c  util.c  visualizer.c
src/org.yxzl.ter-music/ui/braille/: braille_art.c  image_loader.c
tests/: test_config  test_config.c
tools/: requirements.txt  start-server.py
tools/braille_art/: CMakeLists.txt
tools/braille_art/include/: braille_art.h
tools/braille_art/src/: braille_art.c  image_loader.c  main.c
